--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^9.5.0",
+    "vite-plugin-eslint": "^1.3.0",
     "vite": "^2.5.4"
   },
   "gitHooks": {
