--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/compiler-sfc": "^3.2.6",
     "@vue/eslint-config-standard": "^5.1.2",
+    "autoprefixer": "^10.3.4",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -23,6 +24,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^9.5.0",
     "vite-plugin-eslint": "^1.3.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.15",
     "vite": "^2.5.4"
   },
   "gitHooks": {
