--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "serve": "vite preview",
     "build": "vite build",
-    "lint": "vue-cli-service lint",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "dev": "vite"
   },
   "dependencies": {
@@ -30,7 +30,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
+      "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
       "git add"
     ]
   }
