--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "vue": "^3.2.6"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/compiler-sfc": "^3.2.6",
