--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
+    "git-tag-version": "^1.3.1",
     "lint-staged": "^9.5.0",
     "vite-plugin-eslint": "^1.3.0",
     "postcss": "^8.3.6",
