--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
-        "types": ["vite/client"]
+        "types": ["vite/client"],
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
     }
 }
