--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "vue": "^3.2.6"
   },
   "devDependencies": {
@@ -28,10 +29,10 @@
     "eslint-plugin-vue": "^7.0.0",
     "git-tag-version": "^1.3.1",
     "lint-staged": "^9.5.0",
-    "vite-plugin-eslint": "^1.3.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15",
-    "vite": "^2.5.4"
+    "vite": "^2.5.4",
+    "vite-plugin-eslint": "^1.3.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
