--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "git-tag-version": "^1.3.1",
     "lint-staged": "^9.5.0",
     "postcss": "^8.3.6",
+    "rollup-plugin-visualizer": "^5.5.2",
     "tailwindcss": "^2.2.15",
     "vite": "^2.5.4",
     "vite-plugin-eslint": "^1.3.0"
