--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es2015",
-        "module": "esnext",
+        "target": "es6",
+        "module": "commonJS",
         "baseUrl": "./",
         "paths": {
             "@/*": [
